Android NavBar Polish,Font change and Loading Spinner Added

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,8 +151,8 @@ body {
   font-family: 'Fuggles', cursive;
 }
 
-.caesar-dressing-regular {
-  font-family: "Caesar Dressing", system-ui;
+.bebas-neue-regular {
+  font-family: "Bebas Neue", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
