--- a/app/globals.css
+++ b/app/globals.css
@@ -461,115 +461,46 @@ body::-webkit-scrollbar {
 
 /* For loading.tsx file */
 /* Loader styles */
-.pl {
-  display: block;
-  width: 9.375em;
-  height: 9.375em;
+
+/* Loader styles */
+.loading-wave {
+  width: 300px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
 }
 
-.pl__arrows,
-.pl__ring-rotate,
-.pl__ring-stroke,
-.pl__tick {
-  animation-duration: 2s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
+.loading-bar {
+  width: 20px;
+  height: 10px;
+  margin: 0 5px;
+  background-color: #3498db;
+  border-radius: 5px;
+  animation: loading-wave-animation 1s ease-in-out infinite;
 }
 
-.pl__arrows {
-  animation-name: arrows42;
-  transform: rotate(45deg);
-  transform-origin: 16px 52px;
+.loading-bar:nth-child(2) {
+  animation-delay: 0.1s;
 }
 
-.pl__ring-rotate,
-.pl__ring-stroke {
-  transform-origin: 80px 80px;
+.loading-bar:nth-child(3) {
+  animation-delay: 0.2s;
 }
 
-.pl__ring-rotate {
-  animation-name: ringRotate42;
+.loading-bar:nth-child(4) {
+  animation-delay: 0.3s;
 }
 
-.pl__ring-stroke {
-  animation-name: ringStroke42;
-  transform: rotate(-45deg);
-}
-
-.pl__tick {
-  animation-name: tick42;
-}
-
-.pl__tick:nth-child(2) {
-  animation-delay: -1.75s;
-}
-
-.pl__tick:nth-child(3) {
-  animation-delay: -1.5s;
-}
-
-.pl__tick:nth-child(4) {
-  animation-delay: -1.25s;
-}
-
-.pl__tick:nth-child(5) {
-  animation-delay: -1s;
-}
-
-.pl__tick:nth-child(6) {
-  animation-delay: -0.75s;
-}
-
-.pl__tick:nth-child(7) {
-  animation-delay: -0.5s;
-}
-
-.pl__tick:nth-child(8) {
-  animation-delay: -0.25s;
-}
-
-/* Animations */
-@keyframes arrows42 {
-  from {
-    transform: rotate(45deg);
-  }
-  to {
-    transform: rotate(405deg);
-  }
-}
-
-@keyframes ringRotate42 {
-  from {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(720deg);
-  }
-}
-
-@keyframes ringStroke42 {
-  from,
-  to {
-    stroke-dashoffset: 452;
-    transform: rotate(-45deg);
+@keyframes loading-wave-animation {
+  0% {
+    height: 10px;
   }
   50% {
-    stroke-dashoffset: 169.5;
-    transform: rotate(-180deg);
+    height: 50px;
+  }
+  100% {
+    height: 10px;
   }
 }
-
-@keyframes tick42 {
-  from,
-  3%,
-  47%,
-  to {
-    stroke-dashoffset: -12;
-  }
-  14%,
-  36% {
-    stroke-dashoffset: 0;
-  }
-}
-
 
