--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,6 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
 @keyframes blob {
   0% {
     transform: translate(0px, 0px) scale(1);
@@ -156,6 +155,12 @@ body {
   font-weight: 400;
   font-style: normal;
 }
+.press-start-2p-regular {
+  font-family: "Press Start 2P", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 body {
   color: white;
   background: rgb(var(--background-start-rgb));
@@ -182,290 +187,6 @@ body {
   0% { transform: translateX(-100%); }
   100% { transform: translateX(100%); }
 }
-
-
-
-/* .aero-heading-text {
-  position: relative;
-  color: #3494D1;
-  top: -210px;
-  left: 500px;
-  z-index: 10;
-  font-size: 140px;
-  line-height: 150px;
-}
-
-.subtitle {
-  color: #ff3c01;
-  font-size: 40px;
-  padding-top: 25px;
-  margin-left: 30px;
-}
-
-.drones-heading-text {
-  position: relative;
-  top: 910px;
-  left: 350px;
-  z-index: 10;
-  font-size: 140px;
-  line-height: 150px;
-  color: #D7532C;
-}
-
-.planes-heading-text {
-  position: relative;
-  top: 2310px;
-  left: 350px;
-  z-index: 10;
-  font-size: 140px;
-  line-height: 150px;
-  color: #D7532C;
-}
-.c-map{
-  width: 100%;
-  height: 300px;
-}
-
-
-
-@media only screen and (max-width: 770px) {
-  .aero-heading-text {
-    top: -104px;
-    left: 620px;
-    font-size: 37px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 310px;
-    left: 590px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 810px;
-    left: 590px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-}
-
-@media only screen and (max-width: 767px) {
-  .aero-heading-text {
-    top: -190px;
-    left: 920px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 355px;
-    left: 920px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1080px;
-    left: 920px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-}
-@media only screen and (max-width: 414px) {
-  .aero-heading-text {
-    top: -190px;
-    left: 1210px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 475px;
-    left: 1220px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1360px;
-    left: 1220px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-  
-}
-@media only screen and (max-width: 390px) {
-  .aero-heading-text {
-    top: -190px;
-    left: 1100px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 405px;
-    left: 1100px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1250px;
-    left: 1100px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-} 
-
-@media only screen and (max-width: 380px) {
-  .aero-heading-text {
-    top: -190px;
-    left: 850px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 355px;
-    left: 850px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1080px;
-    left: 850px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-} 
-
-/* //samsung z flip */
-/*@media only screen and (max-width: 361px) {
-  .aero-heading-text {
-    top: -190px;
-    left: 1190px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 355px;
-    left: 940px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1080px;
-    left: 940px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-} 
-/* samsung-galaxy-s8+ */
- /*@media only screen and (max-width: 361px) {
-  .aero-heading-text {
-    top: -190px;
-    left: 940px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 355px;
-    left: 940px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1080px;
-    left: 940px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-} 
-@media only screen and (max-width: 345px) {
-  .aero-heading-text {
-    top: -220px;
-    left: 1160px;
-    font-size: 50px;
-    line-height: 45px;
-  }
- ;
-
-  .subtitle {
-    font-size: 11px;
-    padding-top: 7px;
-    margin-left: 10px;
-  }
-
-  .drones-heading-text {
-    top: 425px;
-    left: 1160px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-
-  .planes-heading-text {
-    top: 1280px;
-    left: 1160px;
-    font-size: 40px;
-    line-height: 70px;
-  }
-}  */
 
 
 /* Optional: Hide scrollbar for WebKit-based browsers (e.g., Chrome, Safari) */
@@ -517,5 +238,3 @@ body::-webkit-scrollbar {
     height: 10px;
   }
 }
-
-
