--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 255, 255, 255; /* White background */
   --background-end-rgb: 255, 255, 255;   /* White background */
+  --font-sans: Inter, ui-sans-serif, system-ui, -apple-system, 'Segoe UI', Roboto, 'Helvetica Neue', Arial;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -137,6 +138,9 @@
 html,
 body {
   height: 100%;
+  font-family: var(--font-sans);
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   /* overflow: hidden;  */
 }
 .codystar-font {
